--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,4 +3,7 @@ kind: Kustomization
 bases:
   - common
 resources:
+  - bases/memorydb.services.k8s.aws_acls.yaml
   - bases/memorydb.services.k8s.aws_parametergroups.yaml
+  - bases/memorydb.services.k8s.aws_subnetgroups.yaml
+  - bases/memorydb.services.k8s.aws_users.yaml
