--- a/helm/templates/role-writer.yaml
+++ b/helm/templates/role-writer.yaml
@@ -9,7 +9,13 @@ rules:
 - apiGroups:
   - memorydb.services.k8s.aws
   resources:
+  - acls
+
   - parametergroups
+
+  - subnetgroups
+
+  - users
 
   verbs:
   - create
@@ -22,7 +28,10 @@ rules:
 - apiGroups:
   - memorydb.services.k8s.aws
   resources:
+  - acls
   - parametergroups
+  - subnetgroups
+  - users
   verbs:
   - get
   - patch
