--- a/config/rbac/role-reader.yaml
+++ b/config/rbac/role-reader.yaml
@@ -9,7 +9,10 @@ rules:
 - apiGroups:
   - memorydb.services.k8s.aws
   resources:
+  - acls
   - parametergroups
+  - subnetgroups
+  - users
   verbs:
   - get
   - list
