--- a/config/rbac/role-writer.yaml
+++ b/config/rbac/role-writer.yaml
@@ -10,6 +10,7 @@ rules:
   - memorydb.services.k8s.aws
   resources:
   - acls
+  - clusters
   - parametergroups
   - subnetgroups
   - users
@@ -25,6 +26,7 @@ rules:
   - memorydb.services.k8s.aws
   resources:
   - acls
+  - clusters
   - parametergroups
   - subnetgroups
   - users
